--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "stdbool.h": "c",
         "stdlib.h": "c"
-    }
+    },
+    "C_Cpp.dimInactiveRegions": true
 }
